--- a/web/Login.html
+++ b/web/Login.html
@@ -29,5 +29,6 @@
         </form>
         
         <a href="NewCustomer.html">New Customer Application</a><br>
+        <a href="Password_reset.jsp">Reset Password</a><br>
     </body>
 </html>
