--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="Login.html">Login</a></li>
             <li><a href="NewCustomer.html">New Customer</a></li>
-            <li><a href="options.html">Options</a></li>
+            <li><a href="Account_Activity.jsp">Account Activity</a></li>
+            <li><a href="Transfer_funds.jsp">Transfer Funds</a></li>
         </ul>
         </div>
     </body>
