--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
         <div id="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Login.html">Login</a></li>
-            <li><a href="NewCustomer.html">New Customer</a></li>
+            <li><a href="Login.jsp">Login</a></li>
+            <li><a href="NewCustomer.jsp">New Customer</a></li>
             <li><a href="Account_Activity.jsp">Account Activity</a></li>
             <li><a href="Transfer_funds.jsp">Transfer Funds</a></li>
         </ul>
